--- a/main.html
+++ b/main.html
@@ -3,11 +3,15 @@
 <html>
 
 <head>
+	<title>Assignment</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="main">
+  <div class="heading">This is a heading</div>
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
