--- a/main.html
+++ b/main.html
@@ -9,11 +9,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="main">
-  <div class="heading">This is a heading</div>
-</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
+	<div class="main">
+      <h1 id="heading">This is a Heading</h1>
+</div>
 
 </body>
 
